--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-DATABASE_URL='postgresql://demo_owner:Pykq4KVI3ofa@ep-curly-forest-a1h47ldk-pooler.ap-southeast-1.aws.neon.tech/demo?sslmode=require'
+DATABASE_URL=postgresql://username:password@localhost:5432/todoapp
 JWT_SECRET='your_jwt_secret'
 EMAIL_USER=your_email
 EMAIL_PASS=your_email_password
